--- a/malha-logistica-web/src/main/webapp/index.html
+++ b/malha-logistica-web/src/main/webapp/index.html
@@ -50,10 +50,56 @@
 
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-2">
-				<button type="submit" class="btn btn-default btn-consulta-estivativa">Consultar</button>
+				<button type="submit"
+					class="btn btn-default btn-consulta-estivativa">Consultar</button>
 			</div>
 		</div>
 	</form>
+
+
+	<div id="myModal" class="modal-dialog modal-lg olaMUndo" role="dialog">
+
+	</div>
+
+
+	<div class="modal fade olaMUndo" id="myModal" role="dialog">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Estimativas</h4>
+				</div>
+				<div class="table-responsive">
+					<table id="tabela-estimativas" class="table">
+						<thead>
+							<tr>
+								<th>Ponto de Origem</th>
+								<th>Ponto de Destino</th>
+								<th>Caminho</th>
+								<th>Distancia (KM)</th>
+								<th>Valor Estimado</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+						</tbody>
+					</table>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Voltar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<script id="template-estimativa" type="text/template">
+		<td> <%= conteudo.origem%> </td>
+		<td> <%= conteudo.destino%> </td>
+		<td> <%= conteudo.caminho%> </td>
+		<td> <%= conteudo.distancia%> </td>
+		<td> <%= conteudo.custo%> </td>
+	</script>
+
 
 	<script type="text/javascript" src="static/js/jquery.min.js"></script>
 	<script type="text/javascript" src="static/js/bootstrap.min.js"></script>
@@ -62,7 +108,10 @@
 	<script type="text/javascript" src="static/js/backbone-min.js"></script>
 
 	<script type="text/javascript" src="static/js/malha-logistica.js"></script>
-	<script type="text/javascript" src="static/js/view/formulario-consulta-malha.js"></script>
-	
+	<script type="text/javascript"
+		src="static/js/view/formulario-consulta-malha.js"></script>
+
+
+
 </body>
 </html>
