--- a/malha-logistica-web/src/main/webapp/index.html
+++ b/malha-logistica-web/src/main/webapp/index.html
@@ -57,12 +57,8 @@
 	</form>
 
 
-	<div id="myModal" class="modal-dialog modal-lg olaMUndo" role="dialog">
 
-	</div>
-
-
-	<div class="modal fade olaMUndo" id="myModal" role="dialog">
+	<div class="modal fade listagem-estimativa" id="myModal" role="dialog">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -86,7 +82,7 @@
 					</table>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Voltar</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
 				</div>
 			</div>
 		</div>
@@ -107,11 +103,10 @@
 	<script type="text/javascript" src="static/js/underscore-min.js"></script>
 	<script type="text/javascript" src="static/js/backbone-min.js"></script>
 
-	<script type="text/javascript" src="static/js/malha-logistica.js"></script>
-	<script type="text/javascript"
-		src="static/js/view/formulario-consulta-malha.js"></script>
-
-
+	<script type="text/javascript" src="static/js/malha-logistica-app.js"></script>
+	<script type="text/javascript" src="static/js/model/malha-logistica-model.js"></script>
+	<script type="text/javascript" src="static/js/collection/malha-logistica-collection.js"></script>
+	<script type="text/javascript" src="static/js/view/malha-logistica-view.js"></script>
 
 </body>
 </html>
